--- a/rpm/quicklist.yaml
+++ b/rpm/quicklist.yaml
@@ -1,31 +1,31 @@
-Name:    quicklist
-Summary: My SailfishOS Application
+Name: quicklist
+Summary: quicklist Evernote client
 Version: 0.1
 Release: 1
-Group:   Qt/Qt
+Group: Qt/Qt
 License: LICENSE
 Sources:
-    - "%{name}-%{version}.tar.bz2"
+- '%{name}-%{version}.tar.bz2'
 Description: |
   Short description of my SailfishOS Application
-# Qt Applications generally don't use configure and do use qmake
 Configure: none
-Builder: qmake
-# pkgconfigs we depend on to build
+Builder: qtc5
 PkgConfigBR:
-  - ""
-# Packages we depend on to build
-PkgBR:
-  - ""
-# Packages we require to run
+- qdeclarative5-boostable
+- Qt5Core
+- Qt5Qml
+- Qt5Quick
 Requires:
-  - ""
+- sailfishsilica-qt5
+- mapplauncherd-booster-silica-qt5
+- boost-devel
+- qt5-webkit
 Files:
-  - "/opt"
-
-
-
-# This is a spectacle file.
-# It is a yaml file that uses specify to manage the spec file used to package the application.
-# See https://wiki.merproject.org/wiki/Spectacle for more information
-
+- /opt/sdk/bin
+- /usr/share/applications
+- /usr/share/quicklist
+- /usr/bin
+- /opt/sdk/share/quicklist
+- /opt/sdk/share/applications
+- 
+PkgBR: []
